GloablServices/keshavglobal/force-app/main/default/objects/Service_Request_Fax_job__c/Service_Request_Fax_job__c.object-meta.xml
<CustomObject>
    <label>Service Request Fax job</label>
    <nameField>
        <displayFormat>SfxJ-{000000}</displayFormat>
        <label>Service Request Fax job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Request Fax jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>