GloablServices/keshavglobal/force-app/main/default/objects/Service_Request_Fax_job__c/fields/Cover_Sheet_Azure_Location__c.field-meta.xml
<CustomField>
    <fullName>Cover_Sheet_Azure_Location__c</fullName>
    <label>Cover Sheet Azure Location</label>
    <type>Url</type>
</CustomField>