GloablServices/keshavglobal/force-app/main/default/objects/Service_Request_Fax_job__c/fields/Cover_Sheet_Azure_Location_Link__c.field-meta.xml
<CustomField>
    <fullName>Cover_Sheet_Azure_Location_Link__c</fullName>
    <formula>IF( Cover_Sheet_Azure_Location__c != null, HYPERLINK(&apos;/lightning/cmp/c__LinkToAzureAttachmentWithSASToken?c__recid=&apos;+Id, &apos;Click to Download&apos;,&apos;_self&apos;) , &apos;Cover Sheet Azure Location is Blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cover Sheet Azure Location Link</label>
    <type>Text</type>
</CustomField>