GloablServices/keshavglobal/force-app/main/default/objects/Service_Request_Fax_job__c/fields/Fax_Number__c.field-meta.xml
<CustomField>
    <fullName>Fax_Number__c</fullName>
    <formula>&apos;(&apos; &amp; LEFT( Intake_Request__r.Provider_Fax__c, 3) &amp; &apos;)&apos; &amp; MID(Intake_Request__r.Provider_Fax__c, 4, 3) &amp; &apos;-&apos; &amp; MID(Intake_Request__r.Provider_Fax__c, 7, 4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fax Number</label>
    <type>Text</type>
</CustomField>