GloablServices/keshavglobal/force-app/main/default/objects/Service_Request_Fax_job__c/fields/RightFax_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>RightFax_Job_Id__c</fullName>
    <label>RightFax Job Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>