GloablServices/keshavglobal/force-app/main/default/objects/Service_Request_Fax_job__c/fields/Service_Request__c.field-meta.xml
<CustomField>
    <fullName>Service_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Request</label>
    <referenceTo>Service_Request__c</referenceTo>
    <relationshipLabel>Service Request Fax jobs</relationshipLabel>
    <relationshipName>Service_Request_Fax_jobs</relationshipName>
    <type>Lookup</type>
</CustomField>