GloablServices/keshavglobal/force-app/main/default/objects/Service_Request_Fax_job__c/listViews/Service_Request_Fax_Failed_Service_Request_Fax_job.listView-meta.xml
<ListView>
    <fullName>Service_Request_Fax_Failed_Service_Request_Fax_job</fullName>
    <filterScope>Queue</filterScope>
    <label>Service Request Fax Failed</label>
    <queue>Service_Request_Fax_Failed</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>